--- a/package.json
+++ b/package.json
@@ -13,41 +13,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
-    "angular2-infinite-scroll": "^0.2.7",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/router": "3.4.8",
+    "angular2-infinite-scroll": "^0.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.1.16",
-    "rxjs": "5.0.0-beta.12",
+    "ng2-bootstrap-modal": "0.0.3",
+    "rxjs": "5.2.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.7"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.21",
-    "codelyzer": "~1.0.0-beta.3",
+    "@angular/compiler-cli": "2.4.8",
+    "@types/jasmine": "2.5.43",
+    "@types/node": "^7.0.5",
+    "angular-cli": "1.0.0-beta.28.3",
+    "@angular/cli": "^1.0.0-rc.0",
+    "codelyzer": "~3.0.0-beta.0",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-spec-reporter": "3.2.0",
+    "karma": "1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "5.1.1",
+    "ts-node": "2.1.0",
+    "tslint": "4.5.1",
+    "typescript": "~2.2.1",
+    "webdriver-manager": "12.0.2"
   }
 }
