--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
-    "karma-verbose-reporter": "0.0.5",
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-bootstrap-modal": "1.0.1",
@@ -43,6 +42,8 @@
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.5.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-verbose-reporter": "0.0.5",
+    "node-sass": "^4.5.1",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.6.0",
